--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -30,6 +30,8 @@ jobs:
       uses: borales/actions-yarn@v2.0.0
       with:
         cmd: install
+    - name: Rebuild node-sass
+      run: npm rebuild node-sass
     - name: Make Build folder
       run: yarn build
     - name: Install surge
