--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -27,11 +27,11 @@ jobs:
       with:
         node-version: 12
     - name: Run Yarn install through a github action
-      uses: borales/actions-yarn@v2.0.0
+      uses: borales/actions-yarn@v1.22.4
       with:
         cmd: install
     - name: Install sass
-      run: yarn add node-sass
+      run: npm install node-sass
     - name: Make Build folder
       run: yarn build
     - name: Install surge
