--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -26,14 +26,10 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-    - name: Run Yarn install through a github action
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: install
-    - name: Install sass
-      run: npx install node-sass
+    - name: Install node modules
+      run: npm install
     - name: Make Build folder
-      run: yarn build
+      run: npm build
     - name: Install surge
       run: npm install -g surge
     - name: deploy website
