--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -25,11 +25,11 @@ jobs:
     - name: Install NodeJs
       uses: actions/setup-node@v2-beta
       with:
-        node-version: 10.20.1
+        node-version: 13
     - name: Run Yarn install through a github action
       uses: borales/actions-yarn@v2.0.0
       with:
-        cmd: install
+        cmd: install --unsafe-perm
     - name: Make Build folder
       run: yarn build
     - name: Install surge
