--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -25,11 +25,11 @@ jobs:
     - name: Install NodeJs
       uses: actions/setup-node@v2-beta
       with:
-        node-version: 13
-    - name: Run Yarn install through a github action
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: install --unsafe-perm
+        node-version: 12
+    - name: Prepare for Yarn Installation
+      run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+    - name: install yarn
+      run: sudo apt update && sudo apt install yarn
     - name: Make Build folder
       run: yarn build
     - name: Install surge
