--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Prepare for Yarn Installation
       run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
     - name: install yarn
-      run: sudo apt update && sudo apt install yarn
+      run: sudo apt update && sudo apt install --no-install-recommends yarn
     - name: Make Build folder
       run: yarn build
     - name: Install surge
