--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Prepare for Yarn Installation
       run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
     - run: echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-    - run: sudo apt remove cmdtest
+    - run: apt remove cmdtest
     - name: install yarn
-      run: sudo apt-get update && sudo apt-get install --no-install-recommends yarn
+      run: apt-get update && sudo apt-get install --no-install-recommends yarn
     - name: Make Build folder
       run: yarn build
     - name: Install surge
