--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -31,7 +31,7 @@ jobs:
     - run: echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
     - run: apt remove cmdtest
     - name: install yarn
-      run: apt-get update && sudo apt-get install --no-install-recommends yarn
+      run: apt-get update && apt-get install --no-install-recommends yarn
     - name: Make Build folder
       run: yarn build
     - name: Install surge
