--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -26,14 +26,10 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-    - name: Prepare for Yarn Installation
-      run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-    - run: echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-    - run: apt remove cmdtest
-    - name: install yarn
-      run: apt-get update && apt-get install --no-install-recommends yarn
+    - name: npm install -f
+      run: npm install -f
     - name: Make Build folder
-      run: yarn build
+      run: npm run build --prod
     - name: Install surge
       run: npm install -g surge
     - name: deploy website
