--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-slideshow-image": "^1.5.3",
     "react-visibility-sensor": "^5.1.1",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
